--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
         <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        <img id="tentacles" src="assets/tentacles.png">
     </div>
 
     <!-- background info about company -->
     <h2>Welcome to Sea Monster!</h2>
     <div id="description-container">
         <p>The purpose of our company is to fund independent games. We've been in operation for 12 years.</p>
+        <p id="funding-info"></p>
     </div>
 
     <!-- top games & other interesting stats -->
@@ -41,9 +43,11 @@
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
             <h3>🥇 Top Funded Game</h3>
+            <p id= "top-funded"> </p>
         </div>
         <div class="stats-card" id="second-game">
             <h3>🥈 Runner Up</h3>
+            <p id= "runnerup-funded"> </p>
         </div>
     </div>
 
