--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
 
     <!-- background info about company -->
-    <h2>Welcome to Sea Monster!</h2>
-    <div id="description-container">
+    <h2 class="section-header">Welcome to Sea Monster!</h2>
+    <div class="intro" id="description-container">
         <p>The purpose of our company is to fund independent games. We've been in operation for 12 years.</p>
         <p id="funding-info"></p>
     </div>
@@ -36,14 +36,13 @@
         </div>
         <div class="stats-card">
             <h3>Total Number of Games</h3>
-            <p id="num-games">
-            </p>
+            <p id="num-games"></p>
         </div>
     </div>
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
             <h3>🥇 Top Funded Game</h3>
-            <p id= "top-funded"> </p>
+            <p id= "top-funded"></p>
         </div>
         <div class="stats-card" id="second-game">
             <h3>🥈 Runner Up</h3>
@@ -52,12 +51,12 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
+    <h2 class="section-header">Our Games</h2>
     <p>Check out each of our games below!</p>
     <div id="button-container">
-        <button id="unfunded-btn">Show Unfunded Only</button>
-        <button id="funded-btn">Show Funded Only</button>
-        <button id="all-btn">Show All Games</button>
+        <button class="button-style" id="unfunded-btn">Show Unfunded Only</button>
+        <button class="button-style" id="funded-btn">Show Funded Only</button>
+        <button class="button-style" id="all-btn">Show All Games</button>
     </div>
     <div id="games-container">
 
