--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <div>
         <h1 class="header"><img id="tentacles" src="assets/tentacles.png">Sea Monster Crowdfunding<img id="tentacles" src="assets/tentacles.png">
             <div class="navigation">
-                <a href="#">Home</a>
-                <a href="#ourgames">Our Games | </a>
+                <a href="#"> Home | </a>
+                <a href="#ourgames"> Our Games </a>
                 <input type="text" placeholder="Search..">
             </div>
         </h1>
     </div>
 
     <!-- background info about company -->
+    <br />
     <br />
     <br />
     <br />
@@ -47,7 +48,7 @@
     </div>
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
-            <h3>🥇 Top Funded Game 🥇</h3>
+            <h3 id="ourgames">🥇 Top Funded Game 🥇</h3>
             <p id= "top-funded"></p>
         </div>
         <div class="stats-card" id="second-game">
@@ -57,7 +58,7 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2 class="section-header">Our Games</h2>
+    <h2 class="section-header" >Our Games</h2>
     <div id="button-container">
         <button class="button-style" id="unfunded-btn">Show Unfunded Only</button>
         <button class="button-style" id="funded-btn">Show Funded Only</button>
