fixed navigation bar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <!-- header row with logo -->
     <div>
         <h1 class="header"><img id="tentacles" src="assets/tentacles.png">Sea Monster Crowdfunding<img id="tentacles" src="assets/tentacles.png">
-            <div class="navigation">
-                <a href="#"> Home | </a>
-                <a href="#ourgames"> Our Games </a>
-                <input type="text" placeholder="Search..">
+            <div>
+                <a class="navigation" href="#"> Home | </a>
+                <a class="navigation" href="#ourgames"> Our Games </a>
             </div>
         </h1>
     </div>
